// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lowering v2 (monadic) > lowers (λx.x) 42 (indirect call) 1`] = `
"module
  fn main entry=entry
    entry:
      let env_1 = alloc {  }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_1 }
      let x0 = 42
      let fnref_1 = read closure_0.__fn
      let env_2 = read closure_0.__env
      let x1 = call *fnref_1(env_2, x0)
      return x1
  fn f_0(env_0, x) entry=f_0_entry
    f_0_entry:
      return x"
`;

exports[`Lowering v2 (monadic) > lowers (λx.λy.x) 1 2 (curried const, closure capture) 1`] = `
"module
  fn main entry=entry
    entry:
      let env_3 = alloc {  }
      let fnref_1 = &f_0
      let closure_1 = alloc { __fn: fnref_1, __env: env_3 }
      let x1 = 1
      let fnref_2 = read closure_1.__fn
      let env_4 = read closure_1.__env
      let x2 = call *fnref_2(env_4, x1)
      let x3 = 2
      let fnref_3 = read x2.__fn
      let env_5 = read x2.__env
      let x4 = call *fnref_3(env_5, x3)
      return x4
  fn f_1(env_1, y) entry=f_1_entry
    f_1_entry:
      let x0 = read env_1.v0
      return x0
  fn f_0(env_0, x) entry=f_0_entry
    f_0_entry:
      let env_2 = alloc { v0: x }
      let fnref_0 = &f_1
      let closure_0 = alloc { __fn: fnref_0, __env: env_2 }
      return closure_0"
`;

exports[`Lowering v2 (monadic) > lowers Lit(Num(42)) 1`] = `
"module
  fn main entry=entry
    entry:
      let x0 = 42
      return x0"
`;

exports[`Lowering v2 (monadic) > lowers add(1, 2) 1`] = `
"module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = 2
      let x2 = +(x0, x1)
      return x2"
`;

exports[`Lowering v2 (monadic) > lowers not(true) 1`] = `
"module
  fn main entry=entry
    entry:
      let x0 = true
      let x1 = !(x0)
      return x1"
`;

exports[`Lowering v2 (monadic) > lowers reset { let a = 5; let f = \\p -> p + a; let v = shift k -> k a + k (f a); v + a }. — captures multiple variables, multiple resumptions 1`] = `
"module
  fn main entry=entry
    entry:
      let x0 = 5
      let env_1 = alloc { v0: x0 }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_1 }
      let env_3 = alloc { v0: closure_0, v1: x0 }
      let k_0 = alloc { __env: env_3 }
      jump s0(k_0)
    s0(k_1):
      let env_3 = read k_1.__env
      let closure_0 = read env_3.v0
      let x0 = read env_3.v1
      let i_1 = 0
      jump r0(x0, env_3, i_1)
    s1(x6, env_4):
      let env_5 = update-immutable env_4 { r0: x6 }
      let x5 = read env_5.r0
      let closure_0 = read env_5.v0
      let x0 = read env_5.v1
      let fnref_1 = read closure_0.__fn
      let env_6 = read closure_0.__env
      let x8 = call *fnref_1(env_6, x0)
      let i_2 = 1
      jump r0(x8, env_5, i_2)
    s2(x9, env_7):
      let env_8 = update-immutable env_7 { r1: x9 }
      let x5 = read env_8.r0
      let x7 = read env_8.r1
      let closure_0 = read env_8.v0
      let x0 = read env_8.v1
      let x10 = +(x5, x7)
      jump reset_exit0(x10)
    r0(x3, env_2, i_0):
      let closure_0 = read env_2.v0
      let x0 = read env_2.v1
      let x4 = +(x3, x0)
      branch i_0 { 0 -> s1(x4, env_2) | 1 -> s2(x4, env_2) }
    reset_exit0(x11):
      return x11
  fn f_0(env_0, p) entry=f_0_entry
    f_0_entry:
      let x1 = read env_0.v0
      let x2 = +(p, x1)
      return x2"
`;

exports[`Lowering v2 (monadic) > lowers reset(42) — no shift 1`] = `
"module
  fn main entry=entry
    entry:
      let x0 = 42
      return x0"
`;

exports[`Lowering v2 (monadic) > lowers reset(Block) with captured frame — let x=1; shift k->k 10; x+100 1`] = `
"module
  fn main entry=entry
    entry:
      let x0 = 1
      let env_1 = alloc { v0: x0 }
      let k_0 = alloc { __env: env_1 }
      jump s0(k_0)
    s0(k_1):
      let env_1 = read k_1.__env
      let x0 = read env_1.v0
      let x5 = 10
      let i_1 = 0
      jump r0(x5, env_1, i_1)
    s1(x6, env_2):
      let env_3 = update-immutable env_2 { r0: x6 }
      let x4 = read env_3.r0
      let x0 = read env_3.v0
      jump reset_exit0(x4)
    r0(x1, env_0, i_0):
      let x0 = read env_0.v0
      let x2 = 100
      let x3 = +(x0, x2)
      branch i_0 { 0 -> s1(x3, env_0) }
    reset_exit0(x7):
      return x7"
`;

exports[`Lowering v2 (monadic) > lowers reset(shift k -> (k 1) + (k 2)) — multishot 1`] = `
"module
  fn main entry=entry
    entry:
      let env_1 = alloc {  }
      let k_0 = alloc { __env: env_1 }
      jump s0(k_0)
    s0(k_1):
      let env_1 = read k_1.__env
      let x2 = 1
      let i_1 = 0
      jump r0(x2, env_1, i_1)
    s1(x3, env_2):
      let env_3 = update-immutable env_2 { r0: x3 }
      let x1 = read env_3.r0
      let x5 = 2
      let i_2 = 1
      jump r0(x5, env_3, i_2)
    s2(x6, env_4):
      let env_5 = update-immutable env_4 { r1: x6 }
      let x1 = read env_5.r0
      let x4 = read env_5.r1
      let x7 = +(x1, x4)
      jump reset_exit0(x7)
    r0(x0, env_0, i_0):
      branch i_0 { 0 -> s1(x0, env_0) | 1 -> s2(x0, env_0) }
    reset_exit0(x8):
      return x8"
`;

exports[`Lowering v2 (monadic) > lowers reset(shift k -> 42) — shift returns without resuming 1`] = `
"module
  fn main entry=entry
    entry:
      let env_1 = alloc {  }
      let k_0 = alloc { __env: env_1 }
      jump s0(k_0)
    s0(k_1):
      let env_1 = read k_1.__env
      let x1 = 42
      jump reset_exit0(x1)
    reset_exit0(x2):
      return x2"
`;

exports[`Lowering v2 (monadic) > lowers reset(shift(λk. k 42)) — resume returns 42 1`] = `
"module
  fn main entry=entry
    entry:
      let env_1 = alloc {  }
      let k_0 = alloc { __env: env_1 }
      jump s0(k_0)
    s0(k_1):
      let env_1 = read k_1.__env
      let x2 = 42
      let i_1 = 0
      jump r0(x2, env_1, i_1)
    s1(x3, env_2):
      let env_3 = update-immutable env_2 { r0: x3 }
      let x1 = read env_3.r0
      jump reset_exit0(x1)
    r0(x0, env_0, i_0):
      branch i_0 { 0 -> s1(x0, env_0) }
    reset_exit0(x4):
      return x4"
`;

exports[`Lowering v2 (monadic) > lowers simple match on literal (wildcard) 1`] = `
"module
  fn main entry=entry
    e0:
      let __match_fail = "non-exhaustive match"
      return __match_fail
    entry:
      let x1 = 1
      let x2 = 2
      jump j0(x2)
    j0(x0):
      return x0"
`;

exports[`Lowering v2 (monadic) > lowers λx.x (identity) 1`] = `
"module
  fn main entry=entry
    entry:
      let env_1 = alloc {  }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_1 }
      return closure_0
  fn f_0(env_0, x) entry=f_0_entry
    f_0_entry:
      return x"
`;
